parser.output
   0  $accept : %entry% $end

   1  toplevel : Expr SEMISEMI
   2           | topLet SEMISEMI
   3           | LET REC ID EQ FUN ID RARROW Expr SEMISEMI

   4  topLet : LET ID EQ Expr
   5         | LET ID EQ Expr topLet

   6  Expr : IfExpr
   7       | LetExpr
   8       | DISExpr
   9       | FunExpr
  10       | LetRecExpr

  11  LetExpr : LET ID EQ Expr IN Expr

  12  LetRecExpr : LET REC ID EQ FUN ID RARROW Expr IN Expr

  13  FunExpr : FUN ID RARROW Expr

  14  DISExpr : CONExpr DISJ CONExpr
  15          | CONExpr

  16  CONExpr : LTExpr CONJ LTExpr
  17          | LTExpr

  18  LTExpr : PExpr LT PExpr
  19         | PExpr

  20  PExpr : PExpr PLUS MExpr
  21        | MExpr

  22  MExpr : MExpr MULT AppExpr
  23        | AppExpr

  24  AppExpr : AppExpr AExpr
  25          | AExpr

  26  AExpr : INTV
  27        | TRUE
  28        | FALSE
  29        | ID
  30        | LPAREN Expr RPAREN

  31  IfExpr : IF Expr THEN Expr ELSE Expr

  32  %entry% : '\001' toplevel

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . toplevel  (32)

	LPAREN  shift 3
	IF  shift 4
	TRUE  shift 5
	FALSE  shift 6
	LET  shift 7
	FUN  shift 8
	INTV  shift 9
	ID  shift 10
	.  error

	toplevel  goto 11
	Expr  goto 12
	topLet  goto 13
	IfExpr  goto 14
	LetExpr  goto 15
	DISExpr  goto 16
	FunExpr  goto 17
	LetRecExpr  goto 18
	CONExpr  goto 19
	LTExpr  goto 20
	PExpr  goto 21
	MExpr  goto 22
	AppExpr  goto 23
	AExpr  goto 24


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	AExpr : LPAREN . Expr RPAREN  (30)

	LPAREN  shift 3
	IF  shift 4
	TRUE  shift 5
	FALSE  shift 6
	LET  shift 25
	FUN  shift 8
	INTV  shift 9
	ID  shift 10
	.  error

	Expr  goto 26
	IfExpr  goto 14
	LetExpr  goto 15
	DISExpr  goto 16
	FunExpr  goto 17
	LetRecExpr  goto 18
	CONExpr  goto 19
	LTExpr  goto 20
	PExpr  goto 21
	MExpr  goto 22
	AppExpr  goto 23
	AExpr  goto 24


state 4
	IfExpr : IF . Expr THEN Expr ELSE Expr  (31)

	LPAREN  shift 3
	IF  shift 4
	TRUE  shift 5
	FALSE  shift 6
	LET  shift 25
	FUN  shift 8
	INTV  shift 9
	ID  shift 10
	.  error

	Expr  goto 27
	IfExpr  goto 14
	LetExpr  goto 15
	DISExpr  goto 16
	FunExpr  goto 17
	LetRecExpr  goto 18
	CONExpr  goto 19
	LTExpr  goto 20
	PExpr  goto 21
	MExpr  goto 22
	AppExpr  goto 23
	AExpr  goto 24


state 5
	AExpr : TRUE .  (27)

	.  reduce 27


state 6
	AExpr : FALSE .  (28)

	.  reduce 28


state 7
	toplevel : LET . REC ID EQ FUN ID RARROW Expr SEMISEMI  (3)
	topLet : LET . ID EQ Expr  (4)
	topLet : LET . ID EQ Expr topLet  (5)
	LetExpr : LET . ID EQ Expr IN Expr  (11)
	LetRecExpr : LET . REC ID EQ FUN ID RARROW Expr IN Expr  (12)

	REC  shift 28
	ID  shift 29
	.  error


state 8
	FunExpr : FUN . ID RARROW Expr  (13)

	ID  shift 30
	.  error


state 9
	AExpr : INTV .  (26)

	.  reduce 26


state 10
	AExpr : ID .  (29)

	.  reduce 29


state 11
	%entry% : '\001' toplevel .  (32)

	.  reduce 32


state 12
	toplevel : Expr . SEMISEMI  (1)

	SEMISEMI  shift 31
	.  error


state 13
	toplevel : topLet . SEMISEMI  (2)

	SEMISEMI  shift 32
	.  error


state 14
	Expr : IfExpr .  (6)

	.  reduce 6


state 15
	Expr : LetExpr .  (7)

	.  reduce 7


state 16
	Expr : DISExpr .  (8)

	.  reduce 8


state 17
	Expr : FunExpr .  (9)

	.  reduce 9


state 18
	Expr : LetRecExpr .  (10)

	.  reduce 10


state 19
	DISExpr : CONExpr . DISJ CONExpr  (14)
	DISExpr : CONExpr .  (15)

	DISJ  shift 33
	RPAREN  reduce 15
	SEMISEMI  reduce 15
	THEN  reduce 15
	ELSE  reduce 15
	LET  reduce 15
	IN  reduce 15


state 20
	CONExpr : LTExpr . CONJ LTExpr  (16)
	CONExpr : LTExpr .  (17)

	CONJ  shift 34
	RPAREN  reduce 17
	SEMISEMI  reduce 17
	DISJ  reduce 17
	THEN  reduce 17
	ELSE  reduce 17
	LET  reduce 17
	IN  reduce 17


state 21
	LTExpr : PExpr . LT PExpr  (18)
	LTExpr : PExpr .  (19)
	PExpr : PExpr . PLUS MExpr  (20)

	PLUS  shift 35
	LT  shift 36
	RPAREN  reduce 19
	SEMISEMI  reduce 19
	CONJ  reduce 19
	DISJ  reduce 19
	THEN  reduce 19
	ELSE  reduce 19
	LET  reduce 19
	IN  reduce 19


state 22
	PExpr : MExpr .  (21)
	MExpr : MExpr . MULT AppExpr  (22)

	MULT  shift 37
	RPAREN  reduce 21
	SEMISEMI  reduce 21
	PLUS  reduce 21
	LT  reduce 21
	CONJ  reduce 21
	DISJ  reduce 21
	THEN  reduce 21
	ELSE  reduce 21
	LET  reduce 21
	IN  reduce 21


state 23
	MExpr : AppExpr .  (23)
	AppExpr : AppExpr . AExpr  (24)

	LPAREN  shift 3
	TRUE  shift 5
	FALSE  shift 6
	INTV  shift 9
	ID  shift 10
	RPAREN  reduce 23
	SEMISEMI  reduce 23
	PLUS  reduce 23
	MULT  reduce 23
	LT  reduce 23
	CONJ  reduce 23
	DISJ  reduce 23
	THEN  reduce 23
	ELSE  reduce 23
	LET  reduce 23
	IN  reduce 23

	AExpr  goto 38


state 24
	AppExpr : AExpr .  (25)

	.  reduce 25


state 25
	LetExpr : LET . ID EQ Expr IN Expr  (11)
	LetRecExpr : LET . REC ID EQ FUN ID RARROW Expr IN Expr  (12)

	REC  shift 39
	ID  shift 40
	.  error


state 26
	AExpr : LPAREN Expr . RPAREN  (30)

	RPAREN  shift 41
	.  error


state 27
	IfExpr : IF Expr . THEN Expr ELSE Expr  (31)

	THEN  shift 42
	.  error


state 28
	toplevel : LET REC . ID EQ FUN ID RARROW Expr SEMISEMI  (3)
	LetRecExpr : LET REC . ID EQ FUN ID RARROW Expr IN Expr  (12)

	ID  shift 43
	.  error


state 29
	topLet : LET ID . EQ Expr  (4)
	topLet : LET ID . EQ Expr topLet  (5)
	LetExpr : LET ID . EQ Expr IN Expr  (11)

	EQ  shift 44
	.  error


state 30
	FunExpr : FUN ID . RARROW Expr  (13)

	RARROW  shift 45
	.  error


state 31
	toplevel : Expr SEMISEMI .  (1)

	.  reduce 1


state 32
	toplevel : topLet SEMISEMI .  (2)

	.  reduce 2


state 33
	DISExpr : CONExpr DISJ . CONExpr  (14)

	LPAREN  shift 3
	TRUE  shift 5
	FALSE  shift 6
	INTV  shift 9
	ID  shift 10
	.  error

	CONExpr  goto 46
	LTExpr  goto 20
	PExpr  goto 21
	MExpr  goto 22
	AppExpr  goto 23
	AExpr  goto 24


state 34
	CONExpr : LTExpr CONJ . LTExpr  (16)

	LPAREN  shift 3
	TRUE  shift 5
	FALSE  shift 6
	INTV  shift 9
	ID  shift 10
	.  error

	LTExpr  goto 47
	PExpr  goto 21
	MExpr  goto 22
	AppExpr  goto 23
	AExpr  goto 24


state 35
	PExpr : PExpr PLUS . MExpr  (20)

	LPAREN  shift 3
	TRUE  shift 5
	FALSE  shift 6
	INTV  shift 9
	ID  shift 10
	.  error

	MExpr  goto 48
	AppExpr  goto 23
	AExpr  goto 24


state 36
	LTExpr : PExpr LT . PExpr  (18)

	LPAREN  shift 3
	TRUE  shift 5
	FALSE  shift 6
	INTV  shift 9
	ID  shift 10
	.  error

	PExpr  goto 49
	MExpr  goto 22
	AppExpr  goto 23
	AExpr  goto 24


state 37
	MExpr : MExpr MULT . AppExpr  (22)

	LPAREN  shift 3
	TRUE  shift 5
	FALSE  shift 6
	INTV  shift 9
	ID  shift 10
	.  error

	AppExpr  goto 50
	AExpr  goto 24


state 38
	AppExpr : AppExpr AExpr .  (24)

	.  reduce 24


state 39
	LetRecExpr : LET REC . ID EQ FUN ID RARROW Expr IN Expr  (12)

	ID  shift 51
	.  error


state 40
	LetExpr : LET ID . EQ Expr IN Expr  (11)

	EQ  shift 52
	.  error


state 41
	AExpr : LPAREN Expr RPAREN .  (30)

	.  reduce 30


state 42
	IfExpr : IF Expr THEN . Expr ELSE Expr  (31)

	LPAREN  shift 3
	IF  shift 4
	TRUE  shift 5
	FALSE  shift 6
	LET  shift 25
	FUN  shift 8
	INTV  shift 9
	ID  shift 10
	.  error

	Expr  goto 53
	IfExpr  goto 14
	LetExpr  goto 15
	DISExpr  goto 16
	FunExpr  goto 17
	LetRecExpr  goto 18
	CONExpr  goto 19
	LTExpr  goto 20
	PExpr  goto 21
	MExpr  goto 22
	AppExpr  goto 23
	AExpr  goto 24


state 43
	toplevel : LET REC ID . EQ FUN ID RARROW Expr SEMISEMI  (3)
	LetRecExpr : LET REC ID . EQ FUN ID RARROW Expr IN Expr  (12)

	EQ  shift 54
	.  error


state 44
	topLet : LET ID EQ . Expr  (4)
	topLet : LET ID EQ . Expr topLet  (5)
	LetExpr : LET ID EQ . Expr IN Expr  (11)

	LPAREN  shift 3
	IF  shift 4
	TRUE  shift 5
	FALSE  shift 6
	LET  shift 25
	FUN  shift 8
	INTV  shift 9
	ID  shift 10
	.  error

	Expr  goto 55
	IfExpr  goto 14
	LetExpr  goto 15
	DISExpr  goto 16
	FunExpr  goto 17
	LetRecExpr  goto 18
	CONExpr  goto 19
	LTExpr  goto 20
	PExpr  goto 21
	MExpr  goto 22
	AppExpr  goto 23
	AExpr  goto 24


state 45
	FunExpr : FUN ID RARROW . Expr  (13)

	LPAREN  shift 3
	IF  shift 4
	TRUE  shift 5
	FALSE  shift 6
	LET  shift 25
	FUN  shift 8
	INTV  shift 9
	ID  shift 10
	.  error

	Expr  goto 56
	IfExpr  goto 14
	LetExpr  goto 15
	DISExpr  goto 16
	FunExpr  goto 17
	LetRecExpr  goto 18
	CONExpr  goto 19
	LTExpr  goto 20
	PExpr  goto 21
	MExpr  goto 22
	AppExpr  goto 23
	AExpr  goto 24


state 46
	DISExpr : CONExpr DISJ CONExpr .  (14)

	.  reduce 14


state 47
	CONExpr : LTExpr CONJ LTExpr .  (16)

	.  reduce 16


state 48
	PExpr : PExpr PLUS MExpr .  (20)
	MExpr : MExpr . MULT AppExpr  (22)

	MULT  shift 37
	RPAREN  reduce 20
	SEMISEMI  reduce 20
	PLUS  reduce 20
	LT  reduce 20
	CONJ  reduce 20
	DISJ  reduce 20
	THEN  reduce 20
	ELSE  reduce 20
	LET  reduce 20
	IN  reduce 20


state 49
	LTExpr : PExpr LT PExpr .  (18)
	PExpr : PExpr . PLUS MExpr  (20)

	PLUS  shift 35
	RPAREN  reduce 18
	SEMISEMI  reduce 18
	CONJ  reduce 18
	DISJ  reduce 18
	THEN  reduce 18
	ELSE  reduce 18
	LET  reduce 18
	IN  reduce 18


state 50
	MExpr : MExpr MULT AppExpr .  (22)
	AppExpr : AppExpr . AExpr  (24)

	LPAREN  shift 3
	TRUE  shift 5
	FALSE  shift 6
	INTV  shift 9
	ID  shift 10
	RPAREN  reduce 22
	SEMISEMI  reduce 22
	PLUS  reduce 22
	MULT  reduce 22
	LT  reduce 22
	CONJ  reduce 22
	DISJ  reduce 22
	THEN  reduce 22
	ELSE  reduce 22
	LET  reduce 22
	IN  reduce 22

	AExpr  goto 38


state 51
	LetRecExpr : LET REC ID . EQ FUN ID RARROW Expr IN Expr  (12)

	EQ  shift 57
	.  error


state 52
	LetExpr : LET ID EQ . Expr IN Expr  (11)

	LPAREN  shift 3
	IF  shift 4
	TRUE  shift 5
	FALSE  shift 6
	LET  shift 25
	FUN  shift 8
	INTV  shift 9
	ID  shift 10
	.  error

	Expr  goto 58
	IfExpr  goto 14
	LetExpr  goto 15
	DISExpr  goto 16
	FunExpr  goto 17
	LetRecExpr  goto 18
	CONExpr  goto 19
	LTExpr  goto 20
	PExpr  goto 21
	MExpr  goto 22
	AppExpr  goto 23
	AExpr  goto 24


state 53
	IfExpr : IF Expr THEN Expr . ELSE Expr  (31)

	ELSE  shift 59
	.  error


state 54
	toplevel : LET REC ID EQ . FUN ID RARROW Expr SEMISEMI  (3)
	LetRecExpr : LET REC ID EQ . FUN ID RARROW Expr IN Expr  (12)

	FUN  shift 60
	.  error


state 55
	topLet : LET ID EQ Expr .  (4)
	topLet : LET ID EQ Expr . topLet  (5)
	LetExpr : LET ID EQ Expr . IN Expr  (11)

	LET  shift 61
	IN  shift 62
	SEMISEMI  reduce 4

	topLet  goto 63


state 56
	FunExpr : FUN ID RARROW Expr .  (13)

	.  reduce 13


state 57
	LetRecExpr : LET REC ID EQ . FUN ID RARROW Expr IN Expr  (12)

	FUN  shift 64
	.  error


state 58
	LetExpr : LET ID EQ Expr . IN Expr  (11)

	IN  shift 62
	.  error


state 59
	IfExpr : IF Expr THEN Expr ELSE . Expr  (31)

	LPAREN  shift 3
	IF  shift 4
	TRUE  shift 5
	FALSE  shift 6
	LET  shift 25
	FUN  shift 8
	INTV  shift 9
	ID  shift 10
	.  error

	Expr  goto 65
	IfExpr  goto 14
	LetExpr  goto 15
	DISExpr  goto 16
	FunExpr  goto 17
	LetRecExpr  goto 18
	CONExpr  goto 19
	LTExpr  goto 20
	PExpr  goto 21
	MExpr  goto 22
	AppExpr  goto 23
	AExpr  goto 24


state 60
	toplevel : LET REC ID EQ FUN . ID RARROW Expr SEMISEMI  (3)
	LetRecExpr : LET REC ID EQ FUN . ID RARROW Expr IN Expr  (12)

	ID  shift 66
	.  error


state 61
	topLet : LET . ID EQ Expr  (4)
	topLet : LET . ID EQ Expr topLet  (5)

	ID  shift 67
	.  error


state 62
	LetExpr : LET ID EQ Expr IN . Expr  (11)

	LPAREN  shift 3
	IF  shift 4
	TRUE  shift 5
	FALSE  shift 6
	LET  shift 25
	FUN  shift 8
	INTV  shift 9
	ID  shift 10
	.  error

	Expr  goto 68
	IfExpr  goto 14
	LetExpr  goto 15
	DISExpr  goto 16
	FunExpr  goto 17
	LetRecExpr  goto 18
	CONExpr  goto 19
	LTExpr  goto 20
	PExpr  goto 21
	MExpr  goto 22
	AppExpr  goto 23
	AExpr  goto 24


state 63
	topLet : LET ID EQ Expr topLet .  (5)

	.  reduce 5


state 64
	LetRecExpr : LET REC ID EQ FUN . ID RARROW Expr IN Expr  (12)

	ID  shift 69
	.  error


state 65
	IfExpr : IF Expr THEN Expr ELSE Expr .  (31)

	.  reduce 31


state 66
	toplevel : LET REC ID EQ FUN ID . RARROW Expr SEMISEMI  (3)
	LetRecExpr : LET REC ID EQ FUN ID . RARROW Expr IN Expr  (12)

	RARROW  shift 70
	.  error


state 67
	topLet : LET ID . EQ Expr  (4)
	topLet : LET ID . EQ Expr topLet  (5)

	EQ  shift 71
	.  error


state 68
	LetExpr : LET ID EQ Expr IN Expr .  (11)

	.  reduce 11


state 69
	LetRecExpr : LET REC ID EQ FUN ID . RARROW Expr IN Expr  (12)

	RARROW  shift 72
	.  error


state 70
	toplevel : LET REC ID EQ FUN ID RARROW . Expr SEMISEMI  (3)
	LetRecExpr : LET REC ID EQ FUN ID RARROW . Expr IN Expr  (12)

	LPAREN  shift 3
	IF  shift 4
	TRUE  shift 5
	FALSE  shift 6
	LET  shift 25
	FUN  shift 8
	INTV  shift 9
	ID  shift 10
	.  error

	Expr  goto 73
	IfExpr  goto 14
	LetExpr  goto 15
	DISExpr  goto 16
	FunExpr  goto 17
	LetRecExpr  goto 18
	CONExpr  goto 19
	LTExpr  goto 20
	PExpr  goto 21
	MExpr  goto 22
	AppExpr  goto 23
	AExpr  goto 24


state 71
	topLet : LET ID EQ . Expr  (4)
	topLet : LET ID EQ . Expr topLet  (5)

	LPAREN  shift 3
	IF  shift 4
	TRUE  shift 5
	FALSE  shift 6
	LET  shift 25
	FUN  shift 8
	INTV  shift 9
	ID  shift 10
	.  error

	Expr  goto 74
	IfExpr  goto 14
	LetExpr  goto 15
	DISExpr  goto 16
	FunExpr  goto 17
	LetRecExpr  goto 18
	CONExpr  goto 19
	LTExpr  goto 20
	PExpr  goto 21
	MExpr  goto 22
	AppExpr  goto 23
	AExpr  goto 24


state 72
	LetRecExpr : LET REC ID EQ FUN ID RARROW . Expr IN Expr  (12)

	LPAREN  shift 3
	IF  shift 4
	TRUE  shift 5
	FALSE  shift 6
	LET  shift 25
	FUN  shift 8
	INTV  shift 9
	ID  shift 10
	.  error

	Expr  goto 75
	IfExpr  goto 14
	LetExpr  goto 15
	DISExpr  goto 16
	FunExpr  goto 17
	LetRecExpr  goto 18
	CONExpr  goto 19
	LTExpr  goto 20
	PExpr  goto 21
	MExpr  goto 22
	AppExpr  goto 23
	AExpr  goto 24


state 73
	toplevel : LET REC ID EQ FUN ID RARROW Expr . SEMISEMI  (3)
	LetRecExpr : LET REC ID EQ FUN ID RARROW Expr . IN Expr  (12)

	SEMISEMI  shift 76
	IN  shift 77
	.  error


state 74
	topLet : LET ID EQ Expr .  (4)
	topLet : LET ID EQ Expr . topLet  (5)

	LET  shift 61
	SEMISEMI  reduce 4

	topLet  goto 63


state 75
	LetRecExpr : LET REC ID EQ FUN ID RARROW Expr . IN Expr  (12)

	IN  shift 77
	.  error


state 76
	toplevel : LET REC ID EQ FUN ID RARROW Expr SEMISEMI .  (3)

	.  reduce 3


state 77
	LetRecExpr : LET REC ID EQ FUN ID RARROW Expr IN . Expr  (12)

	LPAREN  shift 3
	IF  shift 4
	TRUE  shift 5
	FALSE  shift 6
	LET  shift 25
	FUN  shift 8
	INTV  shift 9
	ID  shift 10
	.  error

	Expr  goto 78
	IfExpr  goto 14
	LetExpr  goto 15
	DISExpr  goto 16
	FunExpr  goto 17
	LetRecExpr  goto 18
	CONExpr  goto 19
	LTExpr  goto 20
	PExpr  goto 21
	MExpr  goto 22
	AppExpr  goto 23
	AExpr  goto 24


state 78
	LetRecExpr : LET REC ID EQ FUN ID RARROW Expr IN Expr .  (12)

	.  reduce 12


24 terminals, 16 nonterminals
33 grammar rules, 79 states
